--- a/.github/workflows/silmple_first_wf.yml
+++ b/.github/workflows/silmple_first_wf.yml
@@ -27,3 +27,5 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      - name: show environtment
+        run: env
