--- a/.github/workflows/dotnet-app.yml
+++ b/.github/workflows/dotnet-app.yml
@@ -16,13 +16,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - run: dotnet --list-sdks
+
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '10.0.101'
+        
+      - run: dotnet --list-sdks
 
       - name: Build
         run: dotnet build
